fix: Correctly align social icons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .custom-button {
-  @apply hover:bg-neutral-800 font-semibold rounded-xl px-2 py-2 text-center cursor-pointer;
+  @apply hover:bg-neutral-800 font-semibold rounded-xl px-2 py-2 text-center cursor-pointer grid items-center;
 }
